# demo-multiscale

./: LICENSE  README.md  demo_2d_3d.py  demo_2d_3d_ndv.py  demo_3d.py  download_ome_zarr.py  make_example_data.py  pyproject.toml
demo_multiscale/: _frustum.py  _level_of_detail.py  _level_of_detail_2d.py  data_store.py  logging.py  render_visual.py  slicer.py  state.py
demo_multiscale/block_cache/: __init__.py  _block_cache.py  _block_cache_2d.py  _block_cache_3d.py  _cache_parameters_3d.py  _tile_manager.py  _tile_manager_2d.py  _tile_manager_3d.py
demo_multiscale/lut_indirection/: __init__.py  _lut_buffers_2d.py  _lut_indirection_manager.py  _lut_indirection_manager_2d.py
demo_multiscale/shaders/: _block_image.py  _multiscale_volume_brick.py
demo_multiscale/shaders/wgsl/: image_block.wgsl  multiscale_volume_brick.wgsl
demo_multiscale_ndv/: _cache_query.py  _camera_view.py  _chunk_request.py  _data_wrapper.py  _frustum.py  _handle.py  _indexing.py  _level_of_detail_2d.py  _level_of_detail_3d.py  _ome_zarr_wrapper.py  _plan_slice.py  _pygfx_handle.py  data_store.py  render_visual.py  slicer.py  transform.py
demo_multiscale_ndv/block_cache/: __init__.py  _block_cache_2d.py  _block_cache_3d.py  _cache_parameters_2d.py  _tile_manager_2d.py  _tile_manager_3d.py
demo_multiscale_ndv/lut_indirection/: __init__.py  _layout.py  _layout_2d.py  _lut_buffers_2d.py  _lut_indirection_manager.py  _lut_indirection_manager_2d.py
demo_multiscale_ndv/shaders/: _multiscale_volume_brick.py
