[project]
name = "demo-multiscale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "fsspec>=2026.4.0",
    "ndv>=0.5.0",
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
    "pygfx>=0.16.0",
    "pyside6>=6.11.0",
    "qtpy>=2.4.3",
    "s3fs>=2026.4.0",
    "scipy>=1.17.1",
    "superqt>=0.8.1",
    "tensorstore>=0.1.82",
    "tqdm>=4.67.3",
    "yaozarrs[io]>=0.3.0",
    "zarr>=3.2.0",
]
